Smarter zIndex, spacing fixed, etc

--- a/src/scss/elements/_react_datepicker.scss
+++ b/src/scss/elements/_react_datepicker.scss
@@ -6,14 +6,12 @@ $day-width: $space-4;
   input {
     box-sizing: border-box;
     width: 100%;
-    z-index: 103;
   }
 
   .icon {
     position: absolute;
     right: $space-2;
     top: 23%;
-    z-index: 105;
   }
 
   .icon-bg {
@@ -22,7 +20,6 @@ $day-width: $space-4;
     right: 0;
     top: 13%;
     width: 48px;
-    z-index: 104;
 
     // scss-lint:disable MergeableSelector
     &.icon-bg-dark {
@@ -57,8 +54,7 @@ $day-width: $space-4;
 .date-field-react {
   left: -$space-3;
   position: absolute;
-  top: 0;
-  z-index: 102;
+  top: $space-2;
 
   .month-picker {
     margin-top: $space-4 * 2;
